# Compilation-Avoidance-Experiment

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  chart-averages.groovy  data.csv  dependency-diagram.txt  fix-bench-csvs.py  gradle.properties  junit.bzl  performance.scenarios  pom.xml  run.performance.experiments.sh  settings.gradle  settings.gradle.kts
project104/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project104/src/main/java/org/gradle/test/performance/compilationavoidanceexperiment/project104/p52/: Production1040.java  Production1042.java  Production1044.java  Production1045.java  Production1047.java
project104/src/main/java/org/gradle/test/performance/headerjarsexperiment/project104/p52/: Production1040.java  Production1041.java  Production1042.java  Production1043.java  Production1044.java  Production1045.java  Production1046.java  Production1047.java  Production1048.java  Production1049.java
project104/src/main/java/org/gradle/test/performance/largejavamultiproject/project104/p520/: Production10400.java  Production10401.java  Production10402.java  Production10403.java  Production10404.java  Production10405.java  Production10406.java  Production10407.java  Production10408.java  Production10409.java  Production10410.java  Production10411.java  Production10412.java  Production10413.java  Production10414.java  Production10415.java  Production10416.java  Production10417.java  Production10418.java  Production10419.java
project104/src/main/java/org/gradle/test/performance/largejavamultiproject/project104/p521/: Production10420.java  Production10421.java  Production10422.java  Production10423.java  Production10424.java  Production10425.java  Production10426.java  Production10427.java  Production10428.java  Production10429.java  Production10430.java  Production10431.java  Production10432.java  Production10433.java  Production10434.java  Production10435.java  Production10436.java  Production10437.java  Production10438.java  Production10439.java
project104/src/main/java/org/gradle/test/performance/largejavamultiproject/project104/p522/: Production10440.java  Production10441.java  Production10442.java  Production10443.java  Production10444.java  Production10445.java  Production10446.java  Production10447.java  Production10448.java  Production10449.java  Production10450.java  Production10451.java  Production10452.java  Production10453.java  Production10454.java  Production10455.java  Production10456.java  Production10457.java  Production10458.java  Production10459.java
project104/src/main/java/org/gradle/test/performance/largejavamultiproject/project104/p523/: Production10460.java  Production10461.java  Production10462.java  Production10463.java  Production10464.java  Production10465.java  Production10466.java  Production10467.java  Production10468.java  Production10469.java  Production10470.java  Production10471.java  Production10472.java  Production10473.java  Production10474.java  Production10475.java  Production10476.java  Production10477.java  Production10478.java  Production10479.java
project104/src/main/java/org/gradle/test/performance/largejavamultiproject/project104/p524/: Production10480.java  Production10481.java  Production10482.java  Production10483.java  Production10484.java  Production10485.java  Production10486.java  Production10487.java  Production10488.java  Production10489.java  Production10490.java  Production10491.java  Production10492.java  Production10493.java  Production10494.java  Production10495.java  Production10496.java  Production10497.java  Production10498.java  Production10499.java
project104/src/test/java/org/gradle/test/performance/compilationavoidanceexperiment/project104/p52/: Test1040.java  Test1042.java  Test1043.java  Test1044.java  Test1045.java  Test1047.java
project104/src/test/java/org/gradle/test/performance/headerjarsexperiment/project104/p52/: Test1040.java  Test1041.java  Test1042.java  Test1043.java  Test1044.java  Test1045.java  Test1046.java  Test1047.java  Test1048.java  Test1049.java
project104/src/test/java/org/gradle/test/performance/largejavamultiproject/project104/p520/: Test10400.java  Test10401.java  Test10402.java  Test10403.java  Test10404.java  Test10405.java  Test10406.java  (+13 more)
project105/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project109/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project11/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project113/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project117/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project118/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project119/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project12/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project120/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project124/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project128/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project13/: BUILD.bazel  pom.xml
project132/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project133/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project136/: BUILD.bazel  pom.xml
project137/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project141/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project145/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project146/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project150/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project154/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project159/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project16/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project160/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project164/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project168/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project172/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
project173/: BUILD.bazel  build.gradle  build.gradle.kts  pom.xml
(+143131 files in other folders)
