load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project105",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project96:project96",
      "//project101:project101",
      "//project97:project97",
      "//project95:project95",
      "//project93:project93",
      "//project103:project103",
      "//project102:project102",
      "//project104:project104",
      "//project94:project94",
      "//project98:project98",
      "//project99:project99",
      "//project100:project100"
    ]
)

junit_tests(
    name = "tests_for_project105",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project105",
              "//project96:project96",
      "//project101:project101",
      "//project97:project97",
      "//project95:project95",
      "//project93:project93",
      "//project103:project103",
      "//project102:project102",
      "//project104:project104",
      "//project94:project94",
      "//project98:project98",
      "//project99:project99",
      "//project100:project100"
    ],
)