load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project109",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project106:project106",
      "//project107:project107",
      "//project108:project108"
    ]
)

junit_tests(
    name = "tests_for_project109",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project109",
              "//project106:project106",
      "//project107:project107",
      "//project108:project108"
    ],
)