load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project113",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project112:project112",
      "//project110:project110",
      "//project111:project111"
    ]
)

junit_tests(
    name = "tests_for_project113",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project113",
              "//project112:project112",
      "//project110:project110",
      "//project111:project111"
    ],
)