load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project118",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project107:project107",
      "//project117:project117",
      "//project106:project106",
      "//project112:project112",
      "//project108:project108",
      "//project114:project114",
      "//project113:project113",
      "//project115:project115",
      "//project110:project110",
      "//project109:project109",
      "//project111:project111",
      "//project116:project116"
    ]
)

junit_tests(
    name = "tests_for_project118",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project118",
              "//project107:project107",
      "//project117:project117",
      "//project106:project106",
      "//project112:project112",
      "//project108:project108",
      "//project114:project114",
      "//project113:project113",
      "//project115:project115",
      "//project110:project110",
      "//project109:project109",
      "//project111:project111",
      "//project116:project116"
    ],
)