load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project119",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project92:project92",
      "//project105:project105",
      "//project118:project118",
      "//project83:project83",
      "//project87:project87",
      "//project91:project91",
      "//project80:project80",
      "//project81:project81",
      "//project82:project82",
      "//project84:project84",
      "//project85:project85",
      "//project86:project86",
      "//project88:project88",
      "//project89:project89",
      "//project90:project90",
      "//project96:project96",
      "//project100:project100",
      "//project104:project104",
      "//project93:project93",
      "//project94:project94",
      "//project95:project95",
      "//project97:project97",
      "//project98:project98",
      "//project99:project99",
      "//project101:project101",
      "//project102:project102",
      "//project103:project103",
      "//project109:project109",
      "//project113:project113",
      "//project117:project117",
      "//project106:project106",
      "//project107:project107",
      "//project108:project108",
      "//project110:project110",
      "//project111:project111",
      "//project112:project112",
      "//project114:project114",
      "//project115:project115",
      "//project116:project116"
    ]
)

junit_tests(
    name = "tests_for_project119",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project119",
              "//project92:project92",
      "//project105:project105",
      "//project118:project118",
      "//project83:project83",
      "//project87:project87",
      "//project91:project91",
      "//project80:project80",
      "//project81:project81",
      "//project82:project82",
      "//project84:project84",
      "//project85:project85",
      "//project86:project86",
      "//project88:project88",
      "//project89:project89",
      "//project90:project90",
      "//project96:project96",
      "//project100:project100",
      "//project104:project104",
      "//project93:project93",
      "//project94:project94",
      "//project95:project95",
      "//project97:project97",
      "//project98:project98",
      "//project99:project99",
      "//project101:project101",
      "//project102:project102",
      "//project103:project103",
      "//project109:project109",
      "//project113:project113",
      "//project117:project117",
      "//project106:project106",
      "//project107:project107",
      "//project108:project108",
      "//project110:project110",
      "//project111:project111",
      "//project112:project112",
      "//project114:project114",
      "//project115:project115",
      "//project116:project116"
    ],
)