load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project119",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project112:project112",
      "//project93:project93",
      "//project114:project114",
      "//project102:project102",
      "//project110:project110",
      "//project99:project99",
      "//project109:project109",
      "//project83:project83",
      "//project89:project89",
      "//project100:project100",
      "//project118:project118",
      "//project106:project106",
      "//project95:project95",
      "//project108:project108",
      "//project90:project90",
      "//project104:project104",
      "//project80:project80",
      "//project94:project94",
      "//project98:project98",
      "//project88:project88",
      "//project84:project84",
      "//project116:project116",
      "//project96:project96",
      "//project101:project101",
      "//project103:project103",
      "//project91:project91",
      "//project113:project113",
      "//project111:project111",
      "//project81:project81",
      "//project87:project87",
      "//project85:project85",
      "//project82:project82",
      "//project92:project92",
      "//project107:project107",
      "//project117:project117",
      "//project97:project97",
      "//project115:project115",
      "//project105:project105",
      "//project86:project86"
    ]
)

junit_tests(
    name = "tests_for_project119",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project119",
              "//project112:project112",
      "//project93:project93",
      "//project114:project114",
      "//project102:project102",
      "//project110:project110",
      "//project99:project99",
      "//project109:project109",
      "//project83:project83",
      "//project89:project89",
      "//project100:project100",
      "//project118:project118",
      "//project106:project106",
      "//project95:project95",
      "//project108:project108",
      "//project90:project90",
      "//project104:project104",
      "//project80:project80",
      "//project94:project94",
      "//project98:project98",
      "//project88:project88",
      "//project84:project84",
      "//project116:project116",
      "//project96:project96",
      "//project101:project101",
      "//project103:project103",
      "//project91:project91",
      "//project113:project113",
      "//project111:project111",
      "//project81:project81",
      "//project87:project87",
      "//project85:project85",
      "//project82:project82",
      "//project92:project92",
      "//project107:project107",
      "//project117:project117",
      "//project97:project97",
      "//project115:project115",
      "//project105:project105",
      "//project86:project86"
    ],
)