load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project120",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project39:project39",
      "//project79:project79",
      "//project119:project119",
      "//project12:project12",
      "//project25:project25",
      "//project38:project38",
      "//project3:project3",
      "//project7:project7",
      "//project11:project11",
      "//project0:project0",
      "//project1:project1",
      "//project2:project2",
      "//project4:project4",
      "//project5:project5",
      "//project6:project6",
      "//project8:project8",
      "//project9:project9",
      "//project10:project10",
      "//project16:project16",
      "//project20:project20",
      "//project24:project24",
      "//project13:project13",
      "//project14:project14",
      "//project15:project15",
      "//project17:project17",
      "//project18:project18",
      "//project19:project19",
      "//project21:project21",
      "//project22:project22",
      "//project23:project23",
      "//project29:project29",
      "//project33:project33",
      "//project37:project37",
      "//project26:project26",
      "//project27:project27",
      "//project28:project28",
      "//project30:project30",
      "//project31:project31",
      "//project32:project32",
      "//project34:project34",
      "//project35:project35",
      "//project36:project36",
      "//project52:project52",
      "//project65:project65",
      "//project78:project78",
      "//project43:project43",
      "//project47:project47",
      "//project51:project51",
      "//project40:project40",
      "//project41:project41",
      "//project42:project42",
      "//project44:project44",
      "//project45:project45",
      "//project46:project46",
      "//project48:project48",
      "//project49:project49",
      "//project50:project50",
      "//project56:project56",
      "//project60:project60",
      "//project64:project64",
      "//project53:project53",
      "//project54:project54",
      "//project55:project55",
      "//project57:project57",
      "//project58:project58",
      "//project59:project59",
      "//project61:project61",
      "//project62:project62",
      "//project63:project63",
      "//project69:project69",
      "//project73:project73",
      "//project77:project77",
      "//project66:project66",
      "//project67:project67",
      "//project68:project68",
      "//project70:project70",
      "//project71:project71",
      "//project72:project72",
      "//project74:project74",
      "//project75:project75",
      "//project76:project76",
      "//project92:project92",
      "//project105:project105",
      "//project118:project118",
      "//project83:project83",
      "//project87:project87",
      "//project91:project91",
      "//project80:project80",
      "//project81:project81",
      "//project82:project82",
      "//project84:project84",
      "//project85:project85",
      "//project86:project86",
      "//project88:project88",
      "//project89:project89",
      "//project90:project90",
      "//project96:project96",
      "//project100:project100",
      "//project104:project104",
      "//project93:project93",
      "//project94:project94",
      "//project95:project95",
      "//project97:project97",
      "//project98:project98",
      "//project99:project99",
      "//project101:project101",
      "//project102:project102",
      "//project103:project103",
      "//project109:project109",
      "//project113:project113",
      "//project117:project117",
      "//project106:project106",
      "//project107:project107",
      "//project108:project108",
      "//project110:project110",
      "//project111:project111",
      "//project112:project112",
      "//project114:project114",
      "//project115:project115",
      "//project116:project116"
    ]
)

junit_tests(
    name = "tests_for_project120",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project120",
              "//project39:project39",
      "//project79:project79",
      "//project119:project119",
      "//project12:project12",
      "//project25:project25",
      "//project38:project38",
      "//project3:project3",
      "//project7:project7",
      "//project11:project11",
      "//project0:project0",
      "//project1:project1",
      "//project2:project2",
      "//project4:project4",
      "//project5:project5",
      "//project6:project6",
      "//project8:project8",
      "//project9:project9",
      "//project10:project10",
      "//project16:project16",
      "//project20:project20",
      "//project24:project24",
      "//project13:project13",
      "//project14:project14",
      "//project15:project15",
      "//project17:project17",
      "//project18:project18",
      "//project19:project19",
      "//project21:project21",
      "//project22:project22",
      "//project23:project23",
      "//project29:project29",
      "//project33:project33",
      "//project37:project37",
      "//project26:project26",
      "//project27:project27",
      "//project28:project28",
      "//project30:project30",
      "//project31:project31",
      "//project32:project32",
      "//project34:project34",
      "//project35:project35",
      "//project36:project36",
      "//project52:project52",
      "//project65:project65",
      "//project78:project78",
      "//project43:project43",
      "//project47:project47",
      "//project51:project51",
      "//project40:project40",
      "//project41:project41",
      "//project42:project42",
      "//project44:project44",
      "//project45:project45",
      "//project46:project46",
      "//project48:project48",
      "//project49:project49",
      "//project50:project50",
      "//project56:project56",
      "//project60:project60",
      "//project64:project64",
      "//project53:project53",
      "//project54:project54",
      "//project55:project55",
      "//project57:project57",
      "//project58:project58",
      "//project59:project59",
      "//project61:project61",
      "//project62:project62",
      "//project63:project63",
      "//project69:project69",
      "//project73:project73",
      "//project77:project77",
      "//project66:project66",
      "//project67:project67",
      "//project68:project68",
      "//project70:project70",
      "//project71:project71",
      "//project72:project72",
      "//project74:project74",
      "//project75:project75",
      "//project76:project76",
      "//project92:project92",
      "//project105:project105",
      "//project118:project118",
      "//project83:project83",
      "//project87:project87",
      "//project91:project91",
      "//project80:project80",
      "//project81:project81",
      "//project82:project82",
      "//project84:project84",
      "//project85:project85",
      "//project86:project86",
      "//project88:project88",
      "//project89:project89",
      "//project90:project90",
      "//project96:project96",
      "//project100:project100",
      "//project104:project104",
      "//project93:project93",
      "//project94:project94",
      "//project95:project95",
      "//project97:project97",
      "//project98:project98",
      "//project99:project99",
      "//project101:project101",
      "//project102:project102",
      "//project103:project103",
      "//project109:project109",
      "//project113:project113",
      "//project117:project117",
      "//project106:project106",
      "//project107:project107",
      "//project108:project108",
      "//project110:project110",
      "//project111:project111",
      "//project112:project112",
      "//project114:project114",
      "//project115:project115",
      "//project116:project116"
    ],
)