load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project120",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project53:project53",
      "//project6:project6",
      "//project18:project18",
      "//project93:project93",
      "//project102:project102",
      "//project7:project7",
      "//project5:project5",
      "//project27:project27",
      "//project13:project13",
      "//project89:project89",
      "//project58:project58",
      "//project67:project67",
      "//project8:project8",
      "//project70:project70",
      "//project22:project22",
      "//project98:project98",
      "//project9:project9",
      "//project84:project84",
      "//project116:project116",
      "//project101:project101",
      "//project30:project30",
      "//project66:project66",
      "//project35:project35",
      "//project61:project61",
      "//project21:project21",
      "//project75:project75",
      "//project3:project3",
      "//project92:project92",
      "//project117:project117",
      "//project44:project44",
      "//project97:project97",
      "//project49:project49",
      "//project1:project1",
      "//project28:project28",
      "//project23:project23",
      "//project68:project68",
      "//project114:project114",
      "//project63:project63",
      "//project79:project79",
      "//project17:project17",
      "//project52:project52",
      "//project100:project100",
      "//project108:project108",
      "//project12:project12",
      "//project80:project80",
      "//project74:project74",
      "//project57:project57",
      "//project96:project96",
      "//project0:project0",
      "//project91:project91",
      "//project56:project56",
      "//project11:project11",
      "//project40:project40",
      "//project85:project85",
      "//project107:project107",
      "//project39:project39",
      "//project4:project4",
      "//project34:project34",
      "//project62:project62",
      "//project115:project115",
      "//project51:project51",
      "//project45:project45",
      "//project38:project38",
      "//project73:project73",
      "//project112:project112",
      "//project78:project78",
      "//project33:project33",
      "//project42:project42",
      "//project29:project29",
      "//project47:project47",
      "//project106:project106",
      "//project95:project95",
      "//project64:project64",
      "//project90:project90",
      "//project16:project16",
      "//project113:project113",
      "//project50:project50",
      "//project46:project46",
      "//project15:project15",
      "//project81:project81",
      "//project24:project24",
      "//project72:project72",
      "//project41:project41",
      "//project55:project55",
      "//project69:project69",
      "//project10:project10",
      "//project105:project105",
      "//project86:project86",
      "//project43:project43",
      "//project48:project48",
      "//project110:project110",
      "//project99:project99",
      "//project109:project109",
      "//project54:project54",
      "//project83:project83",
      "//project77:project77",
      "//project118:project118",
      "//project19:project19",
      "//project37:project37",
      "//project32:project32",
      "//project104:project104",
      "//project26:project26",
      "//project94:project94",
      "//project88:project88",
      "//project76:project76",
      "//project20:project20",
      "//project103:project103",
      "//project36:project36",
      "//project60:project60",
      "//project71:project71",
      "//project111:project111",
      "//project25:project25",
      "//project87:project87",
      "//project14:project14",
      "//project82:project82",
      "//project119:project119",
      "//project31:project31",
      "//project65:project65",
      "//project2:project2",
      "//project59:project59"
    ]
)

junit_tests(
    name = "tests_for_project120",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project120",
              "//project53:project53",
      "//project6:project6",
      "//project18:project18",
      "//project93:project93",
      "//project102:project102",
      "//project7:project7",
      "//project5:project5",
      "//project27:project27",
      "//project13:project13",
      "//project89:project89",
      "//project58:project58",
      "//project67:project67",
      "//project8:project8",
      "//project70:project70",
      "//project22:project22",
      "//project98:project98",
      "//project9:project9",
      "//project84:project84",
      "//project116:project116",
      "//project101:project101",
      "//project30:project30",
      "//project66:project66",
      "//project35:project35",
      "//project61:project61",
      "//project21:project21",
      "//project75:project75",
      "//project3:project3",
      "//project92:project92",
      "//project117:project117",
      "//project44:project44",
      "//project97:project97",
      "//project49:project49",
      "//project1:project1",
      "//project28:project28",
      "//project23:project23",
      "//project68:project68",
      "//project114:project114",
      "//project63:project63",
      "//project79:project79",
      "//project17:project17",
      "//project52:project52",
      "//project100:project100",
      "//project108:project108",
      "//project12:project12",
      "//project80:project80",
      "//project74:project74",
      "//project57:project57",
      "//project96:project96",
      "//project0:project0",
      "//project91:project91",
      "//project56:project56",
      "//project11:project11",
      "//project40:project40",
      "//project85:project85",
      "//project107:project107",
      "//project39:project39",
      "//project4:project4",
      "//project34:project34",
      "//project62:project62",
      "//project115:project115",
      "//project51:project51",
      "//project45:project45",
      "//project38:project38",
      "//project73:project73",
      "//project112:project112",
      "//project78:project78",
      "//project33:project33",
      "//project42:project42",
      "//project29:project29",
      "//project47:project47",
      "//project106:project106",
      "//project95:project95",
      "//project64:project64",
      "//project90:project90",
      "//project16:project16",
      "//project113:project113",
      "//project50:project50",
      "//project46:project46",
      "//project15:project15",
      "//project81:project81",
      "//project24:project24",
      "//project72:project72",
      "//project41:project41",
      "//project55:project55",
      "//project69:project69",
      "//project10:project10",
      "//project105:project105",
      "//project86:project86",
      "//project43:project43",
      "//project48:project48",
      "//project110:project110",
      "//project99:project99",
      "//project109:project109",
      "//project54:project54",
      "//project83:project83",
      "//project77:project77",
      "//project118:project118",
      "//project19:project19",
      "//project37:project37",
      "//project32:project32",
      "//project104:project104",
      "//project26:project26",
      "//project94:project94",
      "//project88:project88",
      "//project76:project76",
      "//project20:project20",
      "//project103:project103",
      "//project36:project36",
      "//project60:project60",
      "//project71:project71",
      "//project111:project111",
      "//project25:project25",
      "//project87:project87",
      "//project14:project14",
      "//project82:project82",
      "//project119:project119",
      "//project31:project31",
      "//project65:project65",
      "//project2:project2",
      "//project59:project59"
    ],
)