load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project128",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project0:project0",
      "//project126:project126",
      "//project125:project125",
      "//project127:project127"
    ]
)

junit_tests(
    name = "tests_for_project128",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project128",
              "//project0:project0",
      "//project126:project126",
      "//project125:project125",
      "//project127:project127"
    ],
)