load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project13",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [

    ]
)

junit_tests(
    name = "tests_for_project13",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project13",
        
    ],
)