load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project133",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project123:project123",
      "//project128:project128",
      "//project130:project130",
      "//project129:project129",
      "//project124:project124",
      "//project131:project131",
      "//project126:project126",
      "//project125:project125",
      "//project127:project127",
      "//project122:project122",
      "//project121:project121",
      "//project132:project132"
    ]
)

junit_tests(
    name = "tests_for_project133",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project133",
              "//project123:project123",
      "//project128:project128",
      "//project130:project130",
      "//project129:project129",
      "//project124:project124",
      "//project131:project131",
      "//project126:project126",
      "//project125:project125",
      "//project127:project127",
      "//project122:project122",
      "//project121:project121",
      "//project132:project132"
    ],
)