load("@rules_java//java:defs.bzl", "java_library")
load("//:junit.bzl", "junit_tests")

java_library(
    name = "project136",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["-XepDisableAllChecks"],
    visibility = ["//visibility:public"],
    deps = [
      "//project0:project0"
    ]
)

junit_tests(
    name = "tests_for_project136",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        "project136",
              "//project0:project0"
    ],
)